--- a/app/src/main/res/layout/item_movie.xml
+++ b/app/src/main/res/layout/item_movie.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content"
     android:layout_marginStart="3dp"
     android:layout_marginEnd="3dp"
-    android:backgroundTint="#E38B0F"
+    android:backgroundTint="@color/bacgrount_tint_color"
     app:cardCornerRadius="15dp"
     app:cardElevation="3dp">
 
@@ -47,8 +47,8 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:drawableStart="@drawable/ic_baseline_star_24"
                 android:gravity="center"
-                app:drawableStartCompat="@drawable/ic_baseline_star_24"
                 tools:text="78" />
         </LinearLayout>
     </LinearLayout>
