--- a/app/src/main/res/layout/fragment_description_movie.xml
+++ b/app/src/main/res/layout/fragment_description_movie.xml
@@ -34,7 +34,7 @@
                     android:id="@+id/des_image"
                     android:layout_width="200dp"
                     android:layout_height="300dp"
-                    tools:src="@drawable/image_space_jam_a_new_legacy" />
+                    tools:src="@drawable/harry_potter_goblet_of_fire" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -57,7 +57,7 @@
                         android:layout_gravity="center_horizontal"
                         android:layout_marginBottom="10dp"
                         android:textSize="20sp"
-                        tools:text="08 июль 2021" />
+                        tools:text="22 декабрь 2005" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -93,9 +93,8 @@
                 android:id="@+id/des_description"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                tools:text="Чтобы спасти сына, знаменитый чемпион НБА отправляется в сказочный мир,
-                    где в команде мультяшек вынужден сражаться на баскетбольной площадке с
-                    цифровыми копиями знаменитых игроков." />
+                tools:text="Гарри Поттер, Рон и Гермиона возвращаются на
+                четвертый курс школы чародейства и волшебства «Хогвартс» При таинственных обстоятельствах Гарри отобран в число участников опасного соревнования — Турнира Трех Волшебников, однако проблема в том, что все его соперники — намного старше и сильнее." />
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
