--- a/app/src/main/res/layout/profile_fragment.xml
+++ b/app/src/main/res/layout/profile_fragment.xml
@@ -3,8 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.profile.ProfileFragment"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context=".view.profile.ProfileFragment">
 
     <TextView
         android:layout_width="wrap_content"
@@ -12,15 +12,15 @@
         android:text="@string/profileFragment" />
 
     <TextView
+        android:id="@+id/base_image_url"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/base_image_url" />
+        android:layout_height="wrap_content" />
 
 
     <TextView
+        android:id="@+id/base_secure_image_url"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/base_secure_image_url" />
+        android:layout_height="wrap_content" />
 
 
 </LinearLayout>
