--- a/app/src/main/res/layout/genres_fragment.xml
+++ b/app/src/main/res/layout/genres_fragment.xml
@@ -2,13 +2,13 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/movies_by_category_fragment"
+    android:id="@+id/main_fragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.moviesbygenre.MoviesByGenreFragment">
+    tools:context=".view.genres.GenresFragment">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_cat_b"
+        android:id="@+id/rv_cat"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginBottom="1dp"
@@ -16,10 +16,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="parent"
-        tools:listitem="@layout/item_movie" />
+        tools:listitem="@layout/item_genre" />
 
     <FrameLayout
-        android:id="@+id/loadingLayout_b"
+        android:id="@+id/loadingLayout_cat"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/loadingBackground"
