--- a/app/src/main/res/layout/trends_fragment.xml
+++ b/app/src/main/res/layout/trends_fragment.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/movies_by_category_fragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.moviesbygenre.MoviesByGenreFragment">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".view.trends.TrendsFragment">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_cat_b"
+        android:id="@+id/rv_trend"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginBottom="1dp"
@@ -16,10 +15,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="parent"
-        tools:listitem="@layout/item_movie" />
+        tools:listitem="@layout/item_trend" />
 
     <FrameLayout
-        android:id="@+id/loadingLayout_b"
+        android:id="@+id/loadingLayout_trend"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/loadingBackground"
@@ -36,5 +35,4 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center" />
     </FrameLayout>
-
 </androidx.constraintlayout.widget.ConstraintLayout>
