--- a/app/src/main/res/layout/fragment_movie_info.xml
+++ b/app/src/main/res/layout/fragment_movie_info.xml
@@ -20,10 +20,65 @@
                 android:layout_width="120dp"
                 android:layout_height="180dp"
                 android:contentDescription="@string/imagemovie"
-                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/movieNoteHeader"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:src="@drawable/empty_poster" />
+
+
+            <TextView
+                android:id="@+id/movieNoteHeader"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="@string/MovieNoteHeader"
+                android:textSize="20sp"
+                app:layout_constraintBottom_toTopOf="@+id/movieNote"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/imageMovie"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <EditText
+                android:id="@+id/movieNote"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:autofillHints="@string/MovieNoteHeader"
+                android:gravity="start"
+                android:inputType="text"
+                android:labelFor="@id/movieNoteHeader"
+                android:textSize="20sp"
+                app:layout_constraintBottom_toTopOf="@+id/button_ok"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/imageMovie"
+                app:layout_constraintTop_toBottomOf="@+id/movieNoteHeader"
+                tools:ignore="LabelFor"
+                tools:text="Любопытное кинцо" />
+
+
+            <ImageButton
+                android:id="@+id/delete_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:contentDescription="@string/Search"
+                android:src="@drawable/ic_delete_note_24"
+                app:layout_constraintBottom_toBottomOf="@+id/movieNoteHeader"
+                app:layout_constraintEnd_toEndOf="@+id/movieNoteHeader"
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintStart_toStartOf="@+id/movieNoteHeader"
+                app:layout_constraintTop_toTopOf="@+id/movieNoteHeader"
+                app:layout_constraintVertical_bias="0.0" />
+
+
+            <Button
+                android:id="@+id/button_ok"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="@string/ok"
+                app:layout_constraintBottom_toTopOf="@+id/titleMovie"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/imageMovie"
+                app:layout_constraintTop_toBottomOf="@+id/movieNote" />
 
             <TextView
                 android:id="@+id/rated"
