--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -16,8 +16,7 @@
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/main_toolbar"
             android:layout_width="match_parent"
-            android:layout_height="?actionBarSize"
-            app:menu="@menu/toolbar_menu" />
+            android:layout_height="?actionBarSize" />
 
     </com.google.android.material.appbar.AppBarLayout>
 
