--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -14,6 +14,10 @@
         android:icon="@drawable/ic_categories_24"
         android:title="@string/categories" />
     <item
+        android:id="@+id/navigation_favorite"
+        android:icon="@drawable/ic_fav_24"
+        android:title="@string/favorite" />
+    <item
         android:id="@+id/navigation_settings"
         android:icon="@drawable/ic_settings_24"
         android:title="@string/settings" />
